feat: modifications on inference code to make it working

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /ckpt/msldm.ckpt
 /ckpt/sourcevae_ckpt
 /ckpt/msldm_large.ckpt
-
+__pycache__/
 
 # Ignore the ckpt directory inside SourceVAE
 /SourceVAE/ckpt/
